--- a/codeforsite.ipynb
+++ b/codeforsite.ipynb
@@ -2,50 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import load_model\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from keras.utils import to_categorical"
+    "from keras.utils import to_categorical\n",
+    "from sklearn.externals import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# load the trained ML model\n",
-    "model = load_model(\"mortgage_model_trained.h5\")"
+    "model = load_model(\"mortgage_model_trained.h5\")\n",
+    "model_scaler = joblib.load('model_scaler.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# set the input variables\n",
-    "married = 1\n",
+    "married = 0\n",
     "dependents = 0\n",
-    "education = 1\n",
+    "education = 0\n",
     "self_employed = 0\n",
-    "applicantincome = 9000\n",
-    "coapplicantincome = 2000\n",
-    "loanamount = 275\n",
+    "applicantincome = 1130\n",
+    "coapplicantincome = 0\n",
+    "loanamount = 299\n",
     "loan_amount_term = 360\n",
-    "credit_history = 1\n",
-    "property_area = 2"
+    "credit_history = 0\n",
+    "property_area = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#  load the input data into a dataframe\n",
@@ -64,9 +80,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Married</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Self_Employed</th>\n",
+       "      <th>ApplicantIncome</th>\n",
+       "      <th>CoapplicantIncome</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>Loan_Amount_Term</th>\n",
+       "      <th>Credit_History</th>\n",
+       "      <th>Property_Area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1130</td>\n",
+       "      <td>0</td>\n",
+       "      <td>299</td>\n",
+       "      <td>360</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Married  Dependents  Education  Self_Employed  ApplicantIncome  \\\n",
+       "0        0           0          0              0             1130   \n",
+       "\n",
+       "   CoapplicantIncome  LoanAmount  Loan_Amount_Term  Credit_History  \\\n",
+       "0                  0         299               360               0   \n",
+       "\n",
+       "   Property_Area  \n",
+       "0              1  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# checkout the dataframe\n",
     "forminput"
@@ -74,25 +157,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#scale the input \n",
-    "forminput_scaler = StandardScaler().fit(forminput)\n",
-    "forminput_scaled = forminput_scaler.transform(forminput)"
+    "forminput_scaled = model_scaler.transform(forminput)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# run the model on the input\n",
     "predic = model.predict_classes(forminput_scaled)\n",
     "predic[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1], dtype=int64)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
